--- a/src/scss/HomeHeader.scss
+++ b/src/scss/HomeHeader.scss
@@ -1,11 +1,30 @@
+@import "settings/fonts";
+@import "settings/colors";
+
 .home-header {
   display: flex;
   justify-content: space-between;
+}
+
+.home-img {
+  background: url("../assets/images/Home-Hero-Image.jpg");
+  width: 100%;
+  height: 963px;
+  left: -483px;
+}
+
+.home-header-nav {
+  display: flex;
+  justify-content: space-between;
   padding: 20px 40px;
+  flex-direction: column;
+  width: 873px;
 }
 
 .home-nav {
   display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   justify-content: space-between;
   width: 100%;
 }
@@ -27,9 +46,23 @@
   padding: 5px 15px;
   border-radius: 5px;
   text-decoration: none;
+  font: 14px/85px $font-base;
 }
 
 .home-nav-auth .btn:hover {
+  background-color: #ffb3b3;
+  color: white;
+}
+
+.home-nav-list .btn {
+  border: 1px solid #ffb3b3;
+  padding: 5px 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  font: 18px/24px $font-base;
+}
+
+.home-nav-list .btn:hover {
   background-color: #ffb3b3;
   color: white;
 }
