--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -1,4 +1,6 @@
 $primary-color: #3498db;
 $secondary-color: #2ecc71;
 $text-color: #333;
-$background-color: #f8f8f8;
+$background-color: #ffffff;
+$light-color: #f8f8f8;
+$text-color-secondary: #3c3c3c;
