--- a/src/scss/HomeMainButtons.scss
+++ b/src/scss/HomeMainButtons.scss
@@ -35,7 +35,7 @@
   box-sizing: border-box;
   border: 0.75px solid $text-color-secondary;
   height: 120px;
-  width: 15vw;
+  min-width: 15vw;
   margin: 0 20px;
 }
 
