--- a/src/scss/HomeAboutUs.scss
+++ b/src/scss/HomeAboutUs.scss
@@ -32,7 +32,7 @@
   flex-direction: column;
   justify-content: end;
   align-items: flex-end;
-  width: 700px;
+  max-width: 700px;
 }
 
 .aboutus-desc h1 {
