--- a/src/scss/LoginHeader.scss
+++ b/src/scss/LoginHeader.scss
@@ -1,48 +1,36 @@
 @import "settings/fonts";
 @import "settings/colors";
 
-.home-header {
+.login-header {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: stretch;
   position: relative;
 }
 
-.home-img {
-  background: url("../assets/images/Home-Hero-Image.jpg") no-repeat right;
-  background-size: cover;
-  width: 50vw;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-}
-
-.home-header-nav {
-  margin-left: 50vw;
-  width: 50vw;
-  height: 800px;
+.login-header-nav {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   gap: 100px;
 }
 
-.home-nav {
+.login-nav {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   margin-right: 120px;
 }
 
-.home-nav-list,
-.home-nav-auth {
+.login-nav-list,
+.login-nav-auth {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
 }
 
-.home-nav-list .btn {
+.login-nav-list .btn {
   border: 0.75px solid $background-color;
   text-decoration: none;
   color: $text-color-secondary;
@@ -52,12 +40,12 @@
   text-align: center;
 }
 
-.home-nav-list .btn:hover {
+.login-nav-list .btn:hover {
   border: 0.75px solid $text-color-secondary;
   cursor: pointer;
 }
 
-.home-nav-auth .btn {
+.login-nav-auth .btn {
   border: 0.75px solid $background-color;
   text-decoration: none;
   color: #737373;
@@ -66,7 +54,7 @@
   display: block;
 }
 
-.home-nav-auth .btn:hover {
+.login-nav-auth .btn:hover {
   border: 0.75px solid #fad648;
   cursor: pointer;
 }
