--- a/src/scss/ScrollToTop.scss
+++ b/src/scss/ScrollToTop.scss
@@ -19,6 +19,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: opacity 0.3s, transform 0.3s;
   border: 0.75px solid $text-color-secondary;
+  background: $background-color;
+  opacity: 0.7;
 }
 
 .scroll-to-top-span {
